syntax = "proto3";

package fleet.v1;
option go_package = "uav-satellite-sim/gen/fleet/v1;fleetv1";

message Position {
  double x = 1;
  double y = 2;
  double z = 3;

  reserved "alt";
}

enum DroneStatus {
  DRONE_STATUS_UNSPECIFIED = 0;
  DRONE_STATUS_IDLE = 1;
  DRONE_STATUS_EN_ROUTE = 2;
  DRONE_STATUS_DONE = 3;
  DRONE_STATUS_OFFLINE = 4;
}

message DroneState {
  string drone_id = 1;
  Position position = 2;
  double battery = 3;
  DroneStatus status = 4;
  int64 updated_at_unix_ms = 5;
}

message RegisterRequest {
  string drone_id = 1;
}

message RegisterResponse {
  bool ok = 1;
}

message SubscribeCommandsRequest {
  string drone_id = 1;
}

message Mission {
  string mission_id = 1;
  repeated Position waypoints = 2;
}

message RelayMissionRequest {
  Mission mission = 1;
  repeated string path = 2;
  uint32 index = 3;
}

message Command {
  oneof payload {
    Mission assign_mission = 1;
    RelayMissionRequest relay_mission = 2;
  }
}

message Telemetry {
  DroneState state = 1;
}

message TelemetryAck {
  int64 received = 1;
}

message RelayTelemetryRequest {
  Telemetry telemetry = 1;
  repeated string path = 2;
  uint32 index = 3;
}

message RelayAck {
  bool ok = 1;
  string message = 2;
}

message AssignMissionRequest {
  string drone_id = 1;
  repeated Position waypoints = 2;
}

message AssignMissionResponse {
  string mission_id = 1;
  bool pushed = 2;
}

message ListDronesRequest {}

message ListDronesResponse {
  repeated DroneState drones = 1;
}

service FleetControl {
  rpc Register(RegisterRequest) returns (RegisterResponse);

  rpc SubscribeCommands(SubscribeCommandsRequest) returns (stream Command);

  rpc TelemetryStream(stream Telemetry) returns (TelemetryAck);

  rpc SubmitTelemetry(Telemetry) returns (TelemetryAck);

  rpc AssignMission(AssignMissionRequest) returns (AssignMissionResponse);

  rpc ListDrones(ListDronesRequest) returns (ListDronesResponse);
}

service DroneRelay {
  rpc RelayMission(RelayMissionRequest) returns (RelayAck);

  rpc RelayTelemetry(RelayTelemetryRequest) returns (RelayAck);
}
